Further fixes for #204 brought on by RollupCalcItemReplacer - still a few regressions to iron out, but also some great heap size / CPU time / boxcarring improvements to bring to the table

--- a/extra-tests/classes/RollupCalcItemReplacerTests.cls
+++ b/extra-tests/classes/RollupCalcItemReplacerTests.cls
@@ -15,7 +15,7 @@ private class RollupCalcItemReplacerTests {
     );
     List<SObject> replacedContacts = replacer.replace(
       new List<Contact>{ con },
-      new Rollup__mdt(CalcItemWhereClause__c = 'Account.Name = \'' + acc.Name + '\'')
+      new List<Rollup__mdt>{ new Rollup__mdt(CalcItemWhereClause__c = 'Account.Name = \'' + acc.Name + '\'') }
     );
 
     System.assertEquals(true, replacedContacts[0].getPopulatedFieldsAsMap().containsKey('Account'));
@@ -38,7 +38,7 @@ private class RollupCalcItemReplacerTests {
     );
     List<SObject> replacedContacts = replacer.replace(
       new List<Contact>{ con },
-      new Rollup__mdt(CalcItemWhereClause__c = 'Account.Name = \'' + acc.Name + '\' AND Account.Owner.Id != null')
+      new List<Rollup__mdt>{ new Rollup__mdt(CalcItemWhereClause__c = 'Account.Name = \'' + acc.Name + '\' AND Account.Owner.Id != null') }
     );
 
     System.assertEquals(true, replacedContacts[0].getPopulatedFieldsAsMap().containsKey('Account'));
